--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,6 +13,11 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: ${{ github.event.pull_request.head.sha }}
+    - name: Set environment variables
+      env:
+        DB_PASSWORD: ${{ vars.DB_PASSWORD }}
+        POSTGRES_USER: ${{ vars.POSTGRES_USER }}
+        POSTGRES_PASSWORD: ${{ vars.POSTGRES_PASSWORD }}
     - name: run test on docker-compose
       run: |
         docker compose build
