runコマンドを追加

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,6 +18,8 @@ jobs:
         DB_PASSWORD: ${{ vars.DB_PASSWORD }}
         POSTGRES_USER: ${{ vars.POSTGRES_USER }}
         POSTGRES_PASSWORD: ${{ vars.POSTGRES_PASSWORD }}
+      run: |
+        echo "Environment variables are set"
     - name: run test on docker-compose
       run: |
         docker compose build
