--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,9 +15,9 @@ jobs:
         ref: ${{ github.event.pull_request.head.sha }}
     - name: run test on docker-compose
       env:
-        DB_PASSWORD: ${{ vars.DB_PASSWORD }}
-        POSTGRES_USER: ${{ vars.POSTGRES_USER }}
-        POSTGRES_PASSWORD: ${{ vars.POSTGRES_PASSWORD }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+        POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       run: |
         docker compose build
         docker compose run --rm web bin/setup
